<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dashboard">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcome"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="@dimen/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv2">

    </androidx.cardview.widget.CardView>

    <!--<ImageView
        android:id="@+id/logoDashboard"
        android:layout_width="240dp"
        android:layout_height="241dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="1"
        android:src="@drawable/ic_logo"
        android:translationY="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />-->

    <LinearLayout
        android:id="@+id/llmenu"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/bg_menu"
        android:orientation="vertical"
        android:elevation="100dp"
        android:alpha="1"
        android:translationY="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp">

            <LinearLayout
                android:id="@+id/btnProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/bg_black"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="0dp"
                        android:src="@drawable/ic_usuario"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/profile"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDashboard" />
                </LinearLayout>
            </LinearLayout>


            <!--Aqui termina el check-->
            <LinearLayout
                android:id="@+id/layoutHorario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_black"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="0dp"
                        android:src="@drawable/ic_horarios"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:text="@string/hour"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/black"
                        android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>
            <!--Separación-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/bg_black"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="0dp"
                        android:src="@drawable/ic_libros" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/syllabus"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDashboard" />
                </LinearLayout>
            </LinearLayout>
            <!--Separación-->
        </LinearLayout>

        <!--Separación 3 btns-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/bg_black"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="0dp"
                        android:src="@drawable/ic_quiz"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/control"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDashboard" />
                </LinearLayout>
            </LinearLayout>


            <!--Aqui termina el check-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/bg_black"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="1dp"
                        android:src="@drawable/ic_periodico"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/notices"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDashboard" />
                </LinearLayout>
            </LinearLayout>
            <!--Separación-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_black"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="0dp"
                        android:src="@drawable/ic_cerrar"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/logOut"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textDashboard" />
                </LinearLayout>
            </LinearLayout>
            <!--Separación-->
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>